# pdbinf

./: .gitignore  README.md  ci_env.yml  codecov.yml  environment.yml  pyproject.toml
.github/workflows/: ci.yaml
notebooks/: tpo.cif  tpo_guessing_demo.ipynb  tpo_load.ipynb
src/alibaby/: __init__.py  _alibaby.py
src/alibaby/tests/: test_ala.py
src/pdbinf/: __init__.py  _aliases.py  _basepairs.py  _compress.py  _dna_bases.py  _pdbinf.py  _rna_bases.py  _standard_AAs.py  guessing.py
src/pdbinf/tests/: conftest.py  test_181L.py  test_ala.py  test_compress.py  test_dna.py  test_guessing.py  test_nonstandard.py  test_nucleic.py  test_openmm_regression.py  test_pdbx_support.py  test_rna.py  test_standard_AAs.py  test_thrombin.py
